--- a/src/index.scss
+++ b/src/index.scss
@@ -49,7 +49,7 @@ body {
   font-weight: 500;
 }
 
-/* remove the flex gap before dividing */
+// remove the flex gap before dividing
 .search-field-container-double,
 .search-field-container-bedrooms {
   max-width: calc((100% - 4rem) / 3);
@@ -74,26 +74,26 @@ body {
   gap: 0 1rem;
   width: 100%;
   margin-top: 0.5rem;
+
+  .choices {
+    width: 100%;
+  }
+
+  .choices__inner {
+    background-color: white;
+  }
+  
+  .choices__input {
+    font-size: 1.15rem;
+    background-color: white;
+    min-width: fit-content;
+  }
+
+  .choices__item {
+    font-size: 0.9rem;
+  }  
 }
 
-.input-container .choices {
-  width: 100%;
-}
-
-.input-container .choices__inner {
-  background-color: white;
-}
-
-.input-container .choices__input {
-  font-size: 1.15rem;
-  background-color: white;
-  min-width: fit-content;
-}
-
-.input-container .choices__item {
-  font-size: 0.9rem;
-}
- 
 .search-input {
   width: 100%;
   height: 53px;
@@ -113,14 +113,18 @@ body {
   border: none;
   padding: 0.75rem 5rem;
   margin: 0 auto;
+  transition: all 200ms;
+  -webkit-transition: all 200ms;
+  
+  &:hover {
+    background-color: rgb(29, 186, 141);
+    transition: all 200ms;
+    -webkit-transition: all 200ms;
+  }
 }
 
-.btn-search:hover {
-  background-color: rgb(29, 186, 141);
-}
 
-
-/* listings */
+// listings
 .no-listings-found {
   font-size: 1.4rem;
   text-align: center;
@@ -173,20 +177,20 @@ body {
   transition: all 200ms;
   -webkit-transition: all 200ms;
   overflow: hidden;
-}
-
-.img-arrow:hover {
-  width: 35px;
-  transition: all 200ms;
-  -webkit-transition: all 200ms;
+  
+  &:hover {
+    width: 35px;
+    transition: all 200ms;
+    -webkit-transition: all 200ms;
+  }
 }
 
 .img-arrow-left {
   left: 0;
-}
 
-.img-arrow-left span {
-  transform: rotate(180deg);
+  span {
+    transform: rotate(180deg);
+  }
 }
 
 .img-arrow-right {
@@ -206,11 +210,11 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: 0.5rem 0.75rem;
-}
 
-.listing-row h5 {
-  font-size: 1rem;
-  margin: 0;
+  h5 {
+    font-size: 1rem;
+    margin: 0;
+  }
 }
 
 .divider {
@@ -244,12 +248,12 @@ body {
   border: none;
   transition: all 200ms;
   -webkit-transition: all 200ms;
-}
 
-.btn-listing-description-see-more:hover {
-  color: rgb(79, 54, 109);
-  transition: all 200ms;
-  -webkit-transition: all 200ms;
+  &:hover {
+    color: rgb(79, 54, 109);
+    transition: all 200ms;
+    -webkit-transition: all 200ms;
+  }
 }
 
 .listing-link {
@@ -263,13 +267,13 @@ body {
   padding: 0.25rem 0;
   transition: all 200ms;
   -webkit-transition: all 200ms;
-}
 
-.listing-link:hover {
-  color: black;
-  background-color: rgb(222, 224, 241);
-  transition: all 200ms;
-  -webkit-transition: all 200ms;
+  &:hover {
+    color: black;
+    background-color: rgb(222, 224, 241);
+    transition: all 200ms;
+    -webkit-transition: all 200ms;
+  }  
 }
 
 .listing-agent-container {
@@ -282,7 +286,7 @@ body {
   display: none;
 }
 
-
+// media queries
 @media screen and (max-width: 990px) {
   .page-container {
     padding: 2rem 0;
@@ -313,10 +317,10 @@ body {
 
   .row-container-choices {
     flex-direction: column;
-  }
 
-  .row-container-choices .search-field-container {
-    min-width: 100%;
+    .search-field-container {
+      min-width: 100%;
+    }
   }
   
   .search-field-container-double {
@@ -365,5 +369,16 @@ body {
   .btn-search {
     padding: 0.75rem 0;
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .search-label,
+  .search-label-choices {
+    margin: 0;
+  }
+
+  .search-input {
+    height: 2.5rem;
   }
 }
