--- a/src/index.scss
+++ b/src/index.scss
@@ -108,6 +108,30 @@ body {
   padding-left: 0.75rem;
 }
 
+.unknown-listings-title {
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+.unknown-listings-subtitle {
+  font-size: 1rem;
+  font-weight: 700;
+  text-align: center;
+  margin: 1.5rem 0 -1.5rem 0;
+}
+
+.checkbox-label {
+  display: flex;
+  cursor: pointer;
+
+  input[type="checkbox"] {
+    width: 1.2rem;
+    margin-left: 0.75rem;
+    accent-color: rgb(67, 208, 168);
+    cursor: pointer;
+  }
+}
+
 .btn-search {
   display: block;
   font-size: 1.25rem;
@@ -314,6 +338,21 @@ body {
   }
 }
 
+@media screen and (max-width: 850px) {
+  .row-container-checkbox {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 0.75rem;
+    max-width: 28rem;
+    margin: 2rem auto 2rem auto;
+  }
+
+  .checkbox-label {
+    justify-content: right;
+    min-width: 10.25rem;
+  }
+}
+
 @media screen and (max-width: 810px) {
   .search-criteria-container {
     padding: 0 3.5rem;
@@ -358,6 +397,10 @@ body {
     flex-direction: column;
   }
 
+  .row-container-checkbox {
+    flex-direction: row;
+  }
+
   .search-field-container {
     width: 100%;
   }
@@ -377,6 +420,27 @@ body {
 }
 
 @media screen and (max-width: 478px) {
+  .unknown-listings-title {
+    font-size: 1.1rem;
+  }
+
+  .unknown-listings-subtitle {
+    margin: 1.25rem 0 -1.25rem 0;
+  }
+
+  .row-container-checkbox {
+    flex-direction: column;
+    justify-content: left;
+    gap: 0.75rem;
+  }
+
+  .checkbox-label {
+    min-width: unset;
+    width: 100%;
+    max-width: 12rem;
+    justify-content: space-between;
+  }
+
   .search-label,
   .search-label-choices {
     margin: 0;
