--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,11 @@ body {
   margin: 2rem 0;
 }
 
+.row-container-slider {
+  flex-direction: column;
+  gap: 0;
+}
+
 .search-field-container {
   display: flex;
   flex-direction: column;
@@ -66,6 +71,7 @@ body {
 .search-label,
 .search-label-choices {
   display: block;
+  font-weight: 500;
   width: 100%;
 }
 
@@ -79,12 +85,18 @@ body {
     width: 100%;
   }
 
+  .choices__list {
+    z-index: 5;
+  }
+
   .choices__inner {
     background-color: white;
   }
 
   .choices__item {
+    font-size: 0.9rem;
     text-transform: capitalize;
+    z-index: 10;
   }
   
   .choices__input {
@@ -92,20 +104,21 @@ body {
     background-color: white;
     min-width: fit-content;
   }
-
-  .choices__item {
-    font-size: 0.9rem;
-  }  
 }
 
 .search-input {
   width: 100%;
   height: 53px;
+  background-color: white;
   border: 1px solid rgb(214, 212, 180);
   border-radius: 4px;
   font-size: 1.15rem;
   outline: none;
   padding-left: 0.75rem;
+}
+
+.input-choices-loading {
+  margin-top: 0.5rem;
 }
 
 .unknown-listings-title {
@@ -151,6 +164,105 @@ body {
   }
 }
 
+.search-radius-slider {
+  position: relative;
+  display: flex;
+  width: 30rem;
+  height: 3rem;
+  user-select: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    height: 0.125rem;
+    width: calc(100% * (5 / 6)); // remove width of one 'option'
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgb(15, 15, 15);
+  }
+}
+  
+.input-slider {
+  display: none;
+  cursor: pointer;
+
+  &:checked {
+    + label::before {
+      font-weight: 700;
+    }
+    + label::after {
+      border-width: 3px;
+      transform: translate(-50%, -50%) scale(0.85);
+    }
+  
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i * 2 - 1}) ~ .slider-cirle {
+        left: #{($i * 20%) - 10%};
+      }
+    }
+  }
+}
+
+.label-slider {
+  position: relative;
+  flex: 1;
+  height: 100%;
+  cursor: pointer;
+
+  &::before {
+    content: attr(search-radius);
+    position: absolute;
+    font-size: 1rem;
+    left: 50%;
+    white-space: nowrap;
+    transition: all 0.15s ease-in-out;
+    padding-top: 0.25rem;
+  }
+  
+  &::after {
+    content: "";
+    position: absolute;
+    width: 1.75rem;
+    height: 1.75rem;
+    background-color: white;
+    border: 2px solid rgb(15, 15, 15);
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    user-select: none;
+    z-index: 1;
+    cursor: pointer;
+    transition: all 0.15s ease-in-out;
+  }
+
+  &:hover::after {
+    transform: translate(-50%, -50%) scale(1.15);
+    transition: all 0.15s ease-in-out;
+  }
+}
+
+.slider-cirle {
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  background-color: rgb(17, 112, 85);
+  border: 1px solid white;
+  border-radius: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.15s ease-in-out;
+  z-index: 2;
+}
+
+.input-slider {
+  + .label-slider::before {
+    transform: translate(-50%, 2.5rem) scale(0.9);
+    transition: all 0.15s linear;
+  }
+}
 
 // listings
 .no-listings-found {
@@ -310,6 +422,19 @@ body {
   justify-content: space-between;
 }
 
+.pagination-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.pagination-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+}
+
 .hide {
   display: none;
 }
@@ -326,6 +451,10 @@ body {
   
   .row-container {
     gap: 1.5rem;
+  }
+
+  .row-container-slider {
+    gap: 0;
   }
 
   .search-field-container-double,
@@ -413,6 +542,15 @@ body {
     flex-direction: row;
   }
 
+  .row-container-slider {
+    gap: 0.5rem;
+    margin-bottom: 3rem;
+  }
+
+  .search-radius-slider {
+    width: 22rem;
+  }
+
   .btn-search {
     padding: 0.75rem 0;
     width: 100%;
@@ -420,6 +558,10 @@ body {
 }
 
 @media screen and (max-width: 478px) {
+  .search-radius-slider {
+    width: 18.5rem;
+  }
+
   .unknown-listings-title {
     font-size: 1.1rem;
   }
