add missing scss file to index.scss, replace images for Ami

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,7 +2,8 @@
 
 @import "./reset";
 @import "./search-form";
-@import "./loading";
+@import "./listings";
+// @import "./loading";
 @import "./media";
 
 .hide {
