--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -16,6 +16,7 @@ body {
 
 .page-container {
   position: relative;
+  background-color: rgb(255, 251, 240);
   max-width: 80rem;
   padding: 2rem 7.5rem;
   margin: 0 auto;
