--- a/src/scss/_search-form.scss
+++ b/src/scss/_search-form.scss
@@ -1,11 +1,12 @@
 .page-title {
   font-size: 2rem;
   text-align: center;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 
 .search-criteria-container {
-  margin: 2rem auto;
+  margin: 0 auto;
+  padding: 0 7.5rem;
 }
 
 .row-container {
