--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -18,6 +18,5 @@ body {
   position: relative;
   background-color: rgb(255, 251, 240);
   max-width: 80rem;
-  padding: 2rem 7.5rem;
-  margin: 0 auto;
+  margin: 1rem auto 5rem auto;
 }
