--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap");
 
-// @import "./animations";
+@import "./animations";
 @import "./reset";
 @import "./search-form";
 @import "./listings";
-// @import "./loading";
+@import "./loading";
 @import "./sorting-dropdown";
 
 // media queries
