--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1534,3 +1534,51 @@
     10px 0 0 0 #ae734c;
   }
 }
+
+@keyframes grow {
+  0% {
+    width: 100%;
+    max-height: 0;
+    opacity: 0;
+    margin: 0; 
+  }
+  20% {
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    max-height: 40rem;  // ensure this is still enough on mobile
+    opacity: 1;
+    margin: 1.5rem 0;
+  }
+}
+
+@keyframes shrink {
+  0% {
+    width: 100%;
+    max-height: 40rem;
+    opacity: 1;
+    margin: 1.5rem 0;
+  }
+  80% {
+    opacity: 0;
+  }
+  100% {
+    width: 100%;
+    max-height: 0;
+    opacity: 0;
+    margin: 0;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+    height: 1.25rem;
+  }
+  100% {
+    opacity: 1;
+    height: 2.25rem;  // this needs updating
+  }
+}
