--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -3,20 +3,17 @@
 *::after {
   font-family: "Raleway", sans-serif;
   box-sizing: border-box;
+  margin: 0;
 }
 
 i {
   font-family: unset;
 }
 
-body {
-  background-color: rgb(255, 251, 240);
-  color: rgb(15, 15, 15);
-}
-
 .page-container {
   position: relative;
   background-color: rgb(255, 251, 240);
-  max-width: 80rem;
-  margin: 1rem auto 5rem auto;
+  // max-width: 80rem;
+  // margin: 1rem auto 5rem auto;
+  margin: 0 auto;
 }
