--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap");
 
-@import "./animations";
 @import "./reset";
-@import "./search-form";
+@import "./variables";
+
+@import "react-widgets/scss/styles.scss";
+@import "./react-widgets-dropdown.scss";
+
+@import "./animations";
+@import "./search-form-2";
 @import "./listings";
 @import "./loading";
 @import "./sorting-dropdown";
