--- a/src/scss/_search-form.scss
+++ b/src/scss/_search-form.scss
@@ -1,148 +1,282 @@
-.page-title {
-  font-size: 2rem;
-  text-align: center;
-  padding: 1.5rem;
+.hero-section {
+  position: relative;
+  background: url("../../public/house-bg.jpeg") no-repeat center center fixed;
+  background-size: cover;
+  height: 100%;
+  min-height: 70rem;
+  overflow: hidden;
 }
 
-.search-criteria-container {
-  margin: 0 auto;
-  padding: 0 7.5rem;
-}
-
-.row-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  margin: 2rem 0;
-}
-
-.row-container-slider {
-  flex-direction: column;
-  gap: 0;
-}
-
-.search-field-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  flex: 1;
-  font-weight: 500;
-}
-
-// remove the flex gap before dividing
-.search-field-container-double,
-.search-field-container-bedrooms {
-  max-width: calc((100% - 4rem) / 3);
-}
-
-.choices-container {
-  display: flex;
-  flex-direction: column;
-  gap: 0 2rem;
+.hero-section-overlay {
+  position: absolute;
   width: 100%;
   height: 100%;
+  background-color: rgba(121, 121, 121, 0.5);
+  overflow: hidden;
 }
 
-.search-label,
-.search-label-choices {
-  display: block;
-  font-weight: 500;
-  width: 100%;
+.hero-section-title {
+  position: relative;
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10rem;
+  text-shadow: 2px 2px 5px #595959;
 }
 
-.input-container {
+.search-form-container {
+  position: relative;
   display: flex;
-  gap: 0 1rem;
-  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  width: 90%;
+  max-width: 75rem;
+  min-height: 11.5rem;
+  background-color: rgba(255, 255, 255, 0.97);
+  border-radius: 0.6rem;
+  box-shadow: 0 0 0 0.5rem rgba(255, 255, 255, 0.25);
+  margin: 3rem auto 0 auto;
+  padding: 2.5rem;
+  z-index: 55;
+}
+
+.search-label {
+  font-size: 1.2rem;
+  font-weight: 500;
+  height: max-content;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.search-input-container {
+  display: flex;
+  gap: 0.5rem;
   margin-top: 0.5rem;
-
-  .choices {
-    width: 100%;
-  }
-
-  .choices__list {
-    z-index: 5;
-  }
-
-  .choices__inner {
-    background-color: white;
-  }
-
-  .choices__item {
-    font-size: 0.9rem;
-    text-transform: capitalize;
-    z-index: 10;
-  }
-  
-  .choices__input {
-    font-size: 1.15rem;
-    background-color: white;
-    min-width: fit-content;
-  }
 }
 
 .search-input {
-  width: 100%;
-  height: 53px;
-  background-color: white;
-  border: 1px solid rgb(214, 212, 180);
-  border-radius: 4px;
-  font-size: 1.15rem;
-  outline: none;
-  padding-left: 0.75rem;
-}
-
-.input-choices-loading {
-  margin-top: 0.5rem;
-}
-
-.unknown-listings-title {
   font-size: 1.25rem;
+  width: 6.25rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  outline: none;
+  border: 1px solid rgb(236, 231, 231);
+  border-radius: 0.3rem;
   text-align: center;
-}
+  padding: 0.3rem;
 
-.unknown-listings-subtitle {
-  font-size: 1rem;
-  font-weight: 700;
-  text-align: center;
-  margin: 1.5rem 0 -1.5rem 0;
-}
-
-.checkbox-label {
-  display: flex;
-  cursor: pointer;
-
-  input[type="checkbox"] {
-    width: 1.2rem;
-    margin-left: 0.75rem;
-    accent-color: rgb(67, 208, 168);
-    cursor: pointer;
+  &:hover {
+    border-color: #c5cadc;
+    box-shadow: $hover-shadow;
   }
+
+  &:focus {
+    border-color: #c5cadc;
+    box-shadow: $focus-shadow;
+  }
+
+  &::placeholder {
+    color: #a2a2a2;
+  }
+}
+
+.search-textarea {
+  min-width: 23rem;
+  // resize: none;
+}
+
+.search-dropdown-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 0.5rem;
+  z-index: 56;
+}
+
+.search-dropdown-container-open {
+  z-index: 60;
+}
+
+.search-dropdown-input {
+  position: relative;
+  font-size: 1.25rem;
+  background-color: white;
+  // double the min/max input width plus the gap
+  width: calc(6.25rem * 2 + 0.5rem);
+  height: 2.5rem;
+  outline: none;
+  border: 1px solid rgb(236, 231, 231);
+  border-radius: 0.3rem;
+  text-align: center;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  padding: 0.3rem 0;
+  cursor: pointer;
+  z-index: 56;
+
+  &:active,
+  &:focus,
+  &:hover {
+    outline: 0;
+    border-color: #c5cadc;
+    box-shadow: $hover-shadow;
+    
+    .search-dropdown-options {
+      border-color: #c5cadc;
+    }
+  }
+}
+
+.search-dropdown-input-selected {
+  background-color: #eaf5ff;
+}
+
+.search-dropdown-input-open {
+  z-index: 60;
+}
+
+.search-dropdown-options {
+  position: relative;
+  background-color: white;
+  min-width: max-content;
+  border: 1px solid rgb(236, 231, 231);
+  border-radius: 0.3rem;
+  margin-top: 0.35rem;
+  left: 0;
+  overflow: hidden;
+  z-index: 60;
+}
+
+.search-dropdown-option {
+  position: relative;
+  font-size: 1.1rem;
+  width: 100%;
+  background-color: white;
+  text-align: left;
+  padding: 0.2rem 1.25rem 0.2rem 0.5rem;
+  cursor: pointer;
+  animation: 0.3s fade-in forwards;
+  z-index: 60;
+
+  &:hover {
+    background-color: rgb(215, 235, 252);
+    border-color: rgb(215, 235, 252);
+  }
+}
+
+.search-dropdown-option-selected {
+  position: relative;
+  font-size: 1.1rem;
+  background-color: rgb(172, 215, 250);
+  width: 100%;
+  text-align: left; 
+  padding: 0.2rem 1.25rem 0.2rem 0.5rem;
+  cursor: pointer;
+  animation: 0.3s fade-in forwards;
+
+  &::after {
+    position: absolute;
+    content: "\2713";
+    font-size: 0.7rem;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -0.2rem;
+    padding-right: 0.5rem;
+  }
+}
+
+.advanced-search-btn-container {
+  display: block;
+  width: 11.5rem;
+  margin-top: auto;
+  margin-left: 0.75rem;
+  padding-bottom: 0.6rem;
+}
+
+.btn-advanced-search {
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+  height: 2.5rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  margin-top: auto;
+
+  &:hover {
+    font-weight: 600;
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn-advanced-search-icon {
+  font-size: 1.6rem;
+  height: 100%;
 }
 
 .btn-search {
-  display: block;
-  font-size: 1.25rem;
-  background-color: rgb(67, 208, 168);
-  border-radius: 5px;
+  position: absolute;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(137, 198, 231);
+  width: 12rem;
+  height: 4rem;
+  border: 2px solid rgb(129, 129, 242);
+  border-radius: 0.3rem;
   outline: none;
-  border: none;
-  padding: 0.75rem 5rem;
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%, -50%);
+  padding: 0 0.5rem;
   margin: 0 auto;
-  transition: all 200ms;
-  -webkit-transition: all 200ms;
-  
-  &:hover {
-    background-color: rgb(29, 186, 141);
-    transition: all 200ms;
-    -webkit-transition: all 200ms;
-  }
+  z-index: 45;
 
-  &:active {
+  &:focus {
     outline: none;
   }
+
+  &:active,
+  &:hover {
+    outline: none;
+    background-color: rgb(88, 174, 220);
+  }
+}
+
+.advanced-search-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  flex: 1;
+  width: 100%;
+  z-index: 55;
+}
+
+.show-advanced {
+  animation: 0.5s grow ease forwards;
+}
+
+.hide-advanced {
+  animation: 0.4s shrink ease forwards;
+  z-index: 20;
+}
+
+.search-label-radius {
+  margin-bottom: 2rem;
 }
 
 .search-radius-slider {
@@ -229,7 +363,7 @@
   position: absolute;
   width: 1rem;
   height: 1rem;
-  background-color: rgb(17, 112, 85);
+  background-color: rgb(55, 146, 206);
   border: 1px solid white;
   border-radius: 50%;
   top: 50%;
@@ -242,5 +376,42 @@
   + .label-slider::before {
     transform: translate(-50%, 2.5rem) scale(0.9);
     transition: all 0.15s linear;
+  }
+}
+
+.include-unknown-container {
+  margin: 1.75rem 0 0.5rem 0;
+}
+
+.unknown-listings-title {
+  font-size: 1.1rem;
+  text-align: center;
+  white-space: pre-wrap;
+}
+
+.unknown-listings-subtitle {
+  font-size: 1.1rem;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 1.25rem;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 0.5rem 1.5rem;
+}
+
+.checkbox-label {
+  display: flex;
+  cursor: pointer;
+
+  input[type="checkbox"] {
+    width: 1.2rem;
+    margin-left: 0.5rem;
+    accent-color: rgb(55, 146, 206);
+    cursor: pointer;
   }
 }
