--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,7 +7,7 @@
 @import "./react-widgets-dropdown.scss";
 
 @import "./animations";
-@import "./search-form-2";
+@import "./search-form";
 @import "./listings";
 @import "./loading";
 @import "./sorting-dropdown";
