--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -1,245 +1,6 @@
-@media screen and (max-width: 990px) {
-  // .page-container {
-  //   padding: 2rem 0;
-  // }
-
-  .search-criteria-container {
-    padding: 0 5rem;
-  }
-  
-  .row-container {
-    gap: 1.5rem;
-  }
-
-  .row-container-slider {
-    gap: 0;
-  }
-
-  .search-field-container-double,
-  .search-field-container-bedrooms {
-    max-width: calc((100% - 3rem) / 3);
-  }
-}
-
-@media screen and (max-width: 850px) {
-  .row-container-checkbox {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 0.75rem;
-    max-width: 28rem;
-    margin: 2rem auto 2rem auto;
-  }
-
-  .checkbox-label {
-    justify-content: right;
-    min-width: 10.25rem;
-  }
-
-  .listing-container {
-    width: 25rem;
-    height: fit-content;
-  }
-}
-
-@media screen and (max-width: 810px) {
-  .search-criteria-container {
-    padding: 0 3.5rem;
-  }
-
-  .row-container-choices {
-    flex-direction: column;
-
-    .search-field-container {
-      min-width: 100%;
-    }
-  }
-  
-  .search-field-container-double {
-    max-width: calc((100% - 2rem) / 3);
-  }
-
-  .search-field-container-bedrooms {
-    max-width: 100%;
-    width: 100%;
-  }
-  
-  .input-container-double {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-  .input-container-bedrooms {
-    flex-direction: row;
-  }
-}
-
-@media screen and (max-width: 650px) {
-  .search-criteria-container {
-    padding: 0 2rem;
-  }
-}
-
-@media screen and (max-width: 630px) {
-  .listings-title-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-  }
-
-  .sorting-dropdown-container {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .row-container {
-    flex-direction: column;
-  }
-
-  .row-container-checkbox {
-    flex-direction: row;
-  }
-
-  .search-field-container {
-    width: 100%;
-  }
-
-  .search-field-container-double {
-    max-width: unset;
-  }
-
-  .input-container-double {
-    flex-direction: row;
-  }
-
-  .row-container-slider {
-    gap: 0.5rem;
-    margin-bottom: 3rem;
-  }
-
-  .search-radius-slider {
-    width: 22rem;
-  }
-
-  // .btn-search {
-  //   padding: 0.75rem 0;
-  //   width: 100%;
-  // }
-}
-
-@media screen and (max-width: 478px) {
-  // .page-container {
-  //   margin: 1rem 0 0 0;
-  //   padding: 2rem 0 0 0;
-  // }
-
-  .loading-screen-container {
-    padding: 1rem;
-  }
-
-  .loading-circle-outer-container {
-    width: 100%;
-  }
-
-  .search-radius-slider {
-    width: 18.5rem;
-  }
-
-  .unknown-listings-title {
-    font-size: 1.1rem;
-  }
-
-  .unknown-listings-subtitle {
-    margin: 1.25rem 0 -1.25rem 0;
-  }
-
-  .row-container-checkbox {
-    flex-direction: column;
-    justify-content: left;
-    gap: 0.75rem;
-  }
-
-  .checkbox-label {
-    min-width: unset;
-    width: 100%;
-    max-width: 12rem;
-    justify-content: space-between;
-  }
-
-  .search-label,
-  .search-label-choices {
-    margin: 0;
-  }
-
-  .search-input {
-    height: 2.5rem;
-  }
-
-  .search-results-container {
-    border-radius: 0;
-    margin: 3rem 0 0 0;
-    padding: 2rem 1rem;
-  }
-
-  .img-arrow {    
-    &:hover {
-      width: 1.5rem;
-    }
-  }
-}
-
-@media screen and (max-width: 370px) {
-  .loading-screen-container {
-    padding: 0;
-  }
-
-  .loading-text {
-    bottom: -4.5rem;
-  }
-
-  .loading-circle-container {
-    position: relative;
-    width: 18rem;
-    height: 18rem;
-  }
-
-  .grass {
-    top: 13rem;
-  }
-
-  .for-sale-sign {
-    left: 14.5rem;
-    animation: for-sale-sign-slide-down-mobile 0.3s linear forwards;
-    animation-delay: 2.75s;
-
-    &::before {
-      width: 2.3rem;
-      font-size: 0.75rem;
-    }
-  
-    &::after {
-      width: 3.15rem;
-    }
-  }  
-}
-
-
-
-
-
-
-
-
-
-
-
-
-// for updated design
 @media screen and (max-width: 1200px) {
   .hero-section {
-    min-height: 76rem;
+    min-height: 90rem;
   }
   
   .search-form-container {
@@ -256,9 +17,16 @@
   }
 }
 
+@media screen and (max-width: 1050px) {
+  .checkbox-container {
+    max-width: 38rem;
+  }
+}
+
+
 @media screen and (max-width: 850px) {
   .hero-section {
-    min-height: 82rem;
+    min-height: 95rem;
   }
 
   .hero-section-title {
@@ -289,7 +57,7 @@
 
   .search-textarea {
     min-width: unset;
-  }  
+  }
 
   .search-label-long {
     flex-direction: column;
@@ -340,35 +108,49 @@
   // re-order the fields so the dropdowns don't overhang the container too much
   .advanced-search-container {
     margin: 1rem 0 1.5rem 0;
-    :nth-child(1),
-    :nth-child(2),
-    :nth-child(3) { 
-      order: 2;
-    }
+    // :nth-child(1),
+    // :nth-child(2),
+    // :nth-child(3) { 
+    //   order: 2;
+    // }
 
-    :nth-child(4) { 
-      order: 1;
-    }
+    // :nth-child(4) { 
+    //   order: 1;
+    // }
+    
+    // :nth-child(6) { 
+    //   order: 3; 
+    // }
+        
+    // :nth-child(7) {
+    //   order: 4;
+    // }
 
-    :nth-child(5) { 
-      order: 3; 
-    }
+    // :nth-child(5),
+    // :nth-child(8) { 
+    //   order: 5; 
+    // }
+  }
 
-    :nth-child(6) { 
-      order: 2; 
-    }
+  .checkbox-container {
+    max-width: unset;
+  }
+
+  .listing-container {
+    width: 25rem;
+    height: fit-content;
   }
 }
 
 @media screen and (max-width: 700px) {
   .hero-section {
-    min-height: 95rem;
+    min-height: 130rem;
   }
 
   .hero-section-title {
     font-size: 3rem;
     max-width: 22rem;
-    margin: 10rem auto 0.5rem auto;
+    margin: 5rem auto 0.5rem auto;
   }
 
   .search-form-container {
@@ -380,33 +162,82 @@
   .search-dropdown-container {
     font-size: 1.1rem;
     flex-direction: column;
-    min-width: unset;
+    min-width: 100%;
   }
 
-    .search-input {
+  .search-input {
     width: 8.25rem;
   }
 
   .search-dropdown-input {
     width: 17.5rem;
   }
-
   
-.search-dropdown-options {
-  left: 50%;
-  transform: translateX(-50%);
+  .search-dropdown-options {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .search-radius-slider {
+    width: 22rem;
+  }
+
+  .include-unknown-container {
+    margin: 1rem 0 0.5rem 0;
+  }
+
+  .unknown-listings-title {
+    white-space: unset;
+  }
+
+  .unknown-listings-subtitle {
+    margin: 1.75rem 0 0.5rem 0;
+  }
 }
+
+@media screen and (max-width: 630px) {
+  .listings-title-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+
+  .sorting-dropdown-container {
+    margin: 0;
+  }
 }
 
 @media screen and (max-width: 500px) {
   .search-form-container {
-    width: 22rem;
+    width: 88%;
+  }
+}
+
+@media screen and (max-width: 478px) {
+  .loading-screen-container {
+    padding: 1rem;
+  }
+
+  .search-radius-slider {
+    width: 20rem;
+  }
+
+  .search-results-container {
+    border-radius: 0;
+    margin: 3rem 0 0 0;
+    padding: 2rem 1rem;
+  }
+
+  .img-arrow {    
+    &:hover {
+      width: 1.5rem;
+    }
   }
 }
 
 @media screen and (max-width: 440px) {
   .search-form-container {
-    width: 88%;
     padding: 2.5rem 2rem;
   }
 
@@ -426,4 +257,46 @@
     width: 12rem;
   }
   
+  .search-radius-slider {
+    width: 18rem;
+  }
+}
+
+@media screen and (max-width: 370px) {
+  .loading-screen-container {
+    padding: 0;
+  }
+
+  .loading-text {
+    bottom: -4.5rem;
+  }
+
+  .loading-circle-container {
+    position: relative;
+    width: 18rem;
+    height: 18rem;
+  }
+
+  .grass {
+    top: 13rem;
+  }
+
+  .for-sale-sign {
+    left: 14.5rem;
+    animation: for-sale-sign-slide-down-mobile 0.3s linear forwards;
+    animation-delay: 2.75s;
+
+    &::before {
+      width: 2.3rem;
+      font-size: 0.75rem;
+    }
+  
+    &::after {
+      width: 3.15rem;
+    }
+  }
+
+  .search-radius-slider {
+    width: 17rem;
+  }
 }
