--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1,23 +1,22 @@
-
 @keyframes grow-house {
   0% {
-    transform: translateX(-50%) scale(0);
+    transform: translate(-50%, -2.65rem) scale(0);
     opacity: 0;
   }
   60% {
-    transform: translateX(-50%) scale(1);
+    transform: translate(-50%, -2.65rem) scale(1);
     opacity: 0.6;
   }
   70% {
-    transform: translateX(-50%) scale(1.15);
+    transform: translate(-50%, -2.65rem) scale(1.15);
     opacity: 0.7;
   }
   80% {
-    transform: translateX(-50%) scale(1.215);
+    transform: translate(-50%, -2.65rem) scale(1.215);
     opacity: 0.8;
   }
   100% {
-    transform: translateX(-50%) scale(1);
+    transform: translate(-50%, -2.65rem) scale(1);
     opacity: 1;
   }
 }
@@ -58,22 +57,11 @@
 
 @keyframes for-sale-sign-slide-down {
   0% {
-    top: -2rem;
+    transform: translate(5.55rem, -9.5rem);
     opacity: 0;
   }
   100% {
-    top: 9.7rem;
-    opacity: 1;
-  }
-}
-
-@keyframes for-sale-sign-slide-down-mobile {
-  0% {
-    top: -2rem;
-    opacity: 0;
-  }
-  100% {
-    top: 9rem;
+    transform: translate(5.55rem, 0);
     opacity: 1;
   }
 }
@@ -1580,5 +1568,37 @@
   100% {
     opacity: 1;
     height: 2.25rem;  // this needs updating
+  }
+}
+
+@keyframes fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  20% {
+    transform: scale(1.15);
+    opacity: 1;
+  }
+  30% {
+    transform: scale(1.15);
+    opacity: 1;
+  }
+  40% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
   }
 }
