--- a/src/scss/_search-form.scss
+++ b/src/scss/_search-form.scss
@@ -3,7 +3,8 @@
   background: url("../../public/house-bg.jpeg") no-repeat center center fixed;
   background-size: cover;
   height: 100%;
-  min-height: 70rem;
+  // ensure scrollbar is always visible
+  min-height: calc(100vh + 4rem);
   overflow: hidden;
 }
 
@@ -267,7 +268,7 @@
 }
 
 .show-advanced {
-  animation: 0.5s grow ease forwards;
+  animation: 0.4s grow ease forwards;
 }
 
 .hide-advanced {
