Replace keyword input with auto-height textarea, add new agents

--- a/src/scss/_search-form.scss
+++ b/src/scss/_search-form.scss
@@ -86,7 +86,10 @@
 
 .search-textarea {
   min-width: 23rem;
-  // resize: none;
+  max-height: 20rem;
+  line-height: unset;
+  resize: none;
+  overflow: hidden;
 }
 
 .search-dropdown-container {
